logs/dag_id=tune_stream_dag/run_id=scheduled__2023-01-03T000000+0000/task_id=Load_songplays_fact_table/attempt=4.log
[2025-07-24T14:29:17.940+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T00:00:00+00:00 [queued]>
[2025-07-24T14:29:17.948+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T00:00:00+00:00 [queued]>
[2025-07-24T14:29:17.949+0000] {taskinstance.py:2170} INFO - Starting attempt 4 of 4
[2025-07-24T14:29:17.960+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2023-01-03 00:00:00+00:00
[2025-07-24T14:29:17.965+0000] {standard_task_runner.py:60} INFO - Started process 789 to run task
[2025-07-24T14:29:17.968+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'scheduled__2023-01-03T00:00:00+00:00', '--job-id', '545', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpndchgniu']
[2025-07-24T14:29:17.970+0000] {standard_task_runner.py:88} INFO - Job 545: Subtask Load_songplays_fact_table
[2025-07-24T14:29:18.026+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table scheduled__2023-01-03T00:00:00+00:00 [running]> on host aea62fae55be
[2025-07-24T14:29:18.085+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2023-01-03T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-01-03T00:00:00+00:00'
[2025-07-24T14:29:18.090+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 164, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 123, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T14:29:18.100+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20230103T000000, start_date=20250724T142917, end_date=20250724T142918
[2025-07-24T14:29:18.109+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 545 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 789)
[2025-07-24T14:29:18.141+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T14:29:18.163+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
